<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/AppTheme"
    tools:context=".view.home.FragmentHome"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView2"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp"

            >

            <TextView
                style="@style/HeaderStyleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/healt_wise" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/id_dark_mode"
            style="@style/Widget.Material3.CardView.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_left_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/materialCardView2">

            <ImageButton
                android:id="@+id/image_dark"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/baseline_dark_mode_24"
                app:tint="?attr/colorPrimary" />

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:id="@+id/tv_desc"
            style="@style/DescriptionStyleBig"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:layout_marginTop="10dp"
            android:text="@string/cari_tau_jenis_kanker_melalui_kamera"
            app:layout_constraintStart_toStartOf="@+id/materialCardView2"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView2" />

        <TextView
            android:id="@+id/tv_riwayat_scan"
            style="@style/HeaderStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/riwayat_scan"
            app:layout_constraintStart_toStartOf="@+id/tv_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:background="@color/md_theme_dark_inversePrimary"
            android:layout_height="4dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_riwayat_scan"
            app:layout_constraintStart_toStartOf="@+id/tv_riwayat_scan"
            app:layout_constraintTop_toBottomOf="@+id/tv_riwayat_scan" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_rec_user"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingBottom="60dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:itemCount="13"
            tools:listitem="@layout/item_user" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
