<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:padding="10dp"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:tint="?attr/colorPrimary"
            android:background="?attr/selectableItemBackground"
            android:id="@+id/id_back_btn_detail"
            android:layout_marginLeft="@dimen/margin_left_arrow"
            android:layout_marginTop="10dp"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textView2"
            style="@style/HeaderStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hasil Scan"
            android:layout_marginLeft="5dp"
            app:layout_constraintBottom_toBottomOf="@+id/id_back_btn_detail"
            app:layout_constraintStart_toEndOf="@+id/id_back_btn_detail"
            app:layout_constraintTop_toTopOf="@+id/id_back_btn_detail" />

        <ImageView
            android:id="@+id/result_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginLeft="@dimen/margin_left_arrow"
            android:layout_marginRight="@dimen/margin_left_arrow"
            android:layout_marginTop="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/ic_place_holder" />

        <TextView
            android:id="@+id/tv_riwayat_scan"
            style="@style/HeaderStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/penjelasan"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/result_image"
            app:layout_constraintTop_toBottomOf="@+id/materialCardWrapResultText" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:background="@color/md_theme_dark_inversePrimary"
            android:layout_height="4dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_riwayat_scan"
            app:layout_constraintStart_toStartOf="@+id/tv_riwayat_scan"
            app:layout_constraintTop_toBottomOf="@+id/tv_riwayat_scan" />

        <TextView
            android:id="@+id/tv_descPenjelasan"
            style="@style/DescriptionStyleBig"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cari_tau_jenis_kanker_melalui_kamera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_riwayat_scan"
            app:layout_constraintTop_toBottomOf="@+id/tv_riwayat_scan" />


        <TextView
            android:id="@+id/id_tv_refferensi_penyakit"
            style="@style/HeaderStyleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refferensi"

            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/tv_descPenjelasan"
            app:layout_constraintTop_toBottomOf="@+id/tv_descPenjelasan" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:background="@color/md_theme_dark_inversePrimary"
            app:layout_constraintEnd_toEndOf="@+id/tv_riwayat_scan"
            app:layout_constraintStart_toStartOf="@+id/tv_riwayat_scan"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_refferensi_penyakit" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/id_rec_refferensi"
            style="@style/DescriptionStyleBig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:text="@string/cari_tau_jenis_kanker_melalui_kamera"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view2"
            app:layout_constraintTop_toBottomOf="@+id/id_tv_refferensi_penyakit"
            tools:itemCount="10"
            tools:listitem="@layout/item_user" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardWrapResultText"
            android:layout_width="0dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/result_image"
            app:layout_constraintStart_toStartOf="@+id/result_image"
            app:layout_constraintTop_toBottomOf="@+id/result_image">

            <TextView
                style="@style/HeaderStyle"
                android:id="@+id/result_text"
                android:textColor="@color/colorForCancerLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/result"
                app:layout_constraintTop_toBottomOf="@+id/result_image" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>